[ENV_DEV] fix width on mobile

--- a/src/styles/impressum/impressum.scss
+++ b/src/styles/impressum/impressum.scss
@@ -23,6 +23,10 @@
     div {
       width: 100%;
 
+      &:nth-child(2) {
+        width: 100%;
+      }
+
       &:first-child {
         border-bottom: 1px solid black;
       }
